# quickView

./: .gitignore  CMakeLists.txt  CROSS_PLATFORM.md  README.md  build_windows.bat  build_windows.ps1
.augment/rules/: code-generation-rules.md  session-automation.md
docs/: GIT_EMPTY_DIRECTORIES.md
examples/: README.md
scripts/: add_gitkeep.sh  remove_gitkeep.sh
src/: main.cpp
src/core/: quickview.cpp  quickview.h
src/filesystem/: file_operations.cpp  file_operations.h  image_handler.cpp  image_handler.h
src/platform/: terminal_factory.cpp  terminal_interface.h
src/ui/: display.cpp  display.h  input.cpp  input.h
src/ui/ncurses/: ncurses_terminal.cpp  ncurses_terminal.h
src/ui/windows/: windows_terminal.cpp  windows_terminal.h
src/utils/: utils.cpp  utils.h
